Update hlc64's file add text
Added some information to the slide

--- a/_posts/0000-01-02-hlc64.md
+++ b/_posts/0000-01-02-hlc64.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-Your text
+Its Friday and the sun is shining. 
 Use the left arrow to go back!
